- Update shadow of card - Write ui tests for checking tab buttons and navigating to favorite cards screen

--- a/TinderSwipeCards/Presentation/View/SwipeCardView.xib
+++ b/TinderSwipeCards/Presentation/View/SwipeCardView.xib
@@ -67,6 +67,7 @@
                         </view>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My name is" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UGh-dd-89Z">
                             <rect key="frame" x="108.5" y="170" width="82.5" height="19.5"/>
+                            <accessibility key="accessibilityConfiguration" identifier="Title Label"/>
                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                             <color key="textColor" systemColor="systemGrayColor"/>
                             <nil key="highlightedColor"/>
