--- a/TinderSwipeCards/Base.lproj/Main.storyboard
+++ b/TinderSwipeCards/Base.lproj/Main.storyboard
@@ -25,12 +25,13 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a72-Nm-uHM" userLabel="CustomKolodaView" customClass="KolodaView" customModule="Koloda">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a72-Nm-uHM" userLabel="CustomKolodaView" customClass="KolodaView" customModule="Koloda">
                                 <rect key="frame" x="25" y="144" width="364" height="618"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nus-hV-n3t" userLabel="Reload Button">
                                 <rect key="frame" x="10" y="40" width="50" height="50"/>
+                                <accessibility key="accessibilityConfiguration" identifier="Reload Button"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="50" id="C8K-6z-2PR"/>
                                     <constraint firstAttribute="height" constant="50" id="LuG-Id-sYK"/>
@@ -41,6 +42,7 @@
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TWh-gm-VF4" userLabel="Heart Button">
                                 <rect key="frame" x="354" y="40" width="50" height="50"/>
+                                <accessibility key="accessibilityConfiguration" identifier="Favorite Button"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="6NN-ra-3Ri"/>
                                     <constraint firstAttribute="width" constant="50" id="Fxk-94-mQK"/>
@@ -57,11 +59,11 @@
                         <constraints>
                             <constraint firstItem="a72-Nm-uHM" firstAttribute="top" secondItem="SS0-zg-dha" secondAttribute="bottom" constant="100" id="2nP-dq-EmV"/>
                             <constraint firstItem="JLB-JN-Jr6" firstAttribute="centerY" secondItem="a72-Nm-uHM" secondAttribute="centerY" id="4UC-HC-IwK"/>
+                            <constraint firstItem="VMB-0p-CdK" firstAttribute="top" secondItem="a72-Nm-uHM" secondAttribute="bottom" constant="100" id="DFM-kT-Di0"/>
                             <constraint firstItem="TWh-gm-VF4" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" constant="10" id="Dk6-VW-kyy"/>
                             <constraint firstItem="TWh-gm-VF4" firstAttribute="centerY" secondItem="Nus-hV-n3t" secondAttribute="centerY" id="FKb-vD-pKw"/>
                             <constraint firstItem="JLB-JN-Jr6" firstAttribute="centerX" secondItem="a72-Nm-uHM" secondAttribute="centerX" id="dlh-gq-gkM"/>
                             <constraint firstItem="a72-Nm-uHM" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="25" id="g9W-JH-gRA"/>
-                            <constraint firstItem="a72-Nm-uHM" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="618:896" id="ktq-7a-wKz"/>
                             <constraint firstAttribute="trailing" secondItem="a72-Nm-uHM" secondAttribute="trailing" constant="25" id="of0-SR-ICm"/>
                             <constraint firstItem="Nus-hV-n3t" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="10" id="ujM-Pa-SUP"/>
                             <constraint firstItem="Nus-hV-n3t" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="40" id="xUG-fG-u4u"/>
@@ -100,6 +102,12 @@
                                     <action selector="tapCloseButton:" destination="8Fw-PI-t6f" eventType="touchUpInside" id="8oQ-sk-ro8"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Favorite Cards" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IGr-OP-TSO">
+                                <rect key="frame" x="19" y="5" width="385" height="29"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="180" sectionHeaderHeight="28" sectionFooterHeight="28" contentViewInsetsToSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q4i-xe-Myf">
                                 <rect key="frame" x="0.0" y="50" width="414" height="792"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -113,6 +121,7 @@
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Da-rH-PTg" userLabel="Name Label">
                                                     <rect key="frame" x="129" y="33" width="275" height="142"/>
+                                                    <accessibility key="accessibilityConfiguration" identifier="Favorite Card Name"/>
                                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -123,6 +132,7 @@
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ATU-3O-Xda">
                                                             <rect key="frame" x="0.0" y="0.0" width="114" height="114"/>
                                                             <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
+                                                            <accessibility key="accessibilityConfiguration" identifier="Favorite Card ImageView"/>
                                                         </imageView>
                                                     </subviews>
                                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -165,8 +175,11 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="Q4i-xe-Myf" firstAttribute="leading" secondItem="Afj-dt-Cb4" secondAttribute="leading" id="4EQ-t4-YZV"/>
+                            <constraint firstAttribute="trailing" secondItem="IGr-OP-TSO" secondAttribute="trailing" constant="10" id="5Qk-ky-Tfz"/>
+                            <constraint firstItem="IGr-OP-TSO" firstAttribute="top" secondItem="wS4-d5-5vJ" secondAttribute="bottom" constant="5" id="84b-Ql-IFt"/>
                             <constraint firstAttribute="bottom" secondItem="Q4i-xe-Myf" secondAttribute="bottom" id="A2i-kY-pme"/>
                             <constraint firstItem="6nI-xR-LJl" firstAttribute="top" secondItem="wS4-d5-5vJ" secondAttribute="bottom" id="TGa-lJ-BoT"/>
+                            <constraint firstItem="IGr-OP-TSO" firstAttribute="leading" secondItem="Afj-dt-Cb4" secondAttribute="leading" constant="19" id="UCE-E3-4BP"/>
                             <constraint firstAttribute="trailing" secondItem="Q4i-xe-Myf" secondAttribute="trailing" id="nia-4e-cp0"/>
                             <constraint firstItem="Q4i-xe-Myf" firstAttribute="top" secondItem="wS4-d5-5vJ" secondAttribute="bottom" constant="50" id="rsW-kk-NPS"/>
                             <constraint firstAttribute="trailing" secondItem="6nI-xR-LJl" secondAttribute="trailing" constant="10" id="xl2-Ib-VU6"/>
